# libvulcan

./: Cargo.toml  LICENSE  README.md
src/: date_utils.rs  errors.rs  lib.rs  mappings.rs
src/local_structs/: attendance.rs  attendance_stats.rs  exams.rs  grades.rs  homework.rs  lucky_number.rs  mod.rs  timetable.rs
src/server_structs/: attendance.rs  attendance_stats.rs  exams_homework.rs  grades.rs  lucky_number.rs  mod.rs  timetable.rs
