[package]
name = "libvulcan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
error-chain = "0.12.4"
icy_sixel = "0.1.2"
image = "0.25.2"
lazy_static = "1.5.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = [
    "blocking",
    "http2",
    "rustls-tls",
    "charset",
], default-features = false }
reqwest_cookie_store = "0.8.0"
scraper = { version = "0.20.0", features = ["atomic"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
